Unit test update, controller route correction, refactor internal naming convention

--- a/src/SFA.DAS.Rofjaa.Application/SFA.DAS.Rofjaa.Application.csproj
+++ b/src/SFA.DAS.Rofjaa.Application/SFA.DAS.Rofjaa.Application.csproj
@@ -9,4 +9,10 @@
   <ItemGroup>
     <ProjectReference Include="..\SFA.DAS.Rofjaa.Domain\SFA.DAS.Rofjaa.Domain.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <None Remove="Agencies\Handlers\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Agencies\Handlers\" />
+  </ItemGroup>
 </Project>
