--- a/src/SFA.DAS.Rofjaa.Api.AcceptanceTests/SFA.DAS.Rofjaa.Api.AcceptanceTests.csproj
+++ b/src/SFA.DAS.Rofjaa.Api.AcceptanceTests/SFA.DAS.Rofjaa.Api.AcceptanceTests.csproj
@@ -20,4 +20,9 @@
   <ItemGroup>
     <ProjectReference Include="..\SFA.DAS.Rofjaa.Api\SFA.DAS.Rofjaa.Api.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <SpecFlowFeatureFiles Update="Features\Agencies.feature">
+      <Visible>False</Visible>
+    </SpecFlowFeatureFiles>
+  </ItemGroup>
 </Project>
