--- a/pipeline-templates/job/code-build.yml
+++ b/pipeline-templates/job/code-build.yml
@@ -14,8 +14,8 @@ jobs:
   - template: azure-pipelines-templates/build/step/gitversion.yml@das-platform-building-blocks
 
   - template: azure-pipelines-templates/build/step/app-build.yml@das-platform-building-blocks
-
-  - template: azure-pipelines-templates/build/step/dependency-check.yml@das-platform-building-blocks
+    parameters:
+        SonarCloudProjectKey: SkillsFundingAgency_das-rofjaa-api
 
   - task: DotNetCoreCLI@2
     displayName: Publish - dotnet publish ${{ parameters.SolutionBaseName }}
