Added missing parameters to AT deployment job

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -68,7 +68,9 @@ stages:
     parameters:
       Environment: AT
       SolutionBaseName: $(SolutionBaseName)
+      DACPACSolutionBaseName: $(DACPACSolutionBaseName)
       ServiceConnection: SFA-DAS-DevTest-ARM
+      OverrideBlockOnPossibleDataLoss: ${{ parameters.OverrideBlockOnPossibleDataLoss }}
 
 # - stage: Deploy_TEST
 #   dependsOn: Build
