--- a/src/SFA.DAS.Rofjaa.Api/SFA.DAS.Rofjaa.Api.csproj
+++ b/src/SFA.DAS.Rofjaa.Api/SFA.DAS.Rofjaa.Api.csproj
@@ -4,6 +4,12 @@
     <ProjectGuid>52499A9C-BC56-43C5-B538-F8CF03DA999C</ProjectGuid>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Remove="DataFiles\**" />
+    <Content Remove="DataFiles\**" />
+    <EmbeddedResource Remove="DataFiles\**" />
+    <None Remove="DataFiles\**" />
+  </ItemGroup>
+  <ItemGroup>
     <PackageReference Include="AspNetCore.HealthChecks.SqlServer" Version="3.1.1" />
     <PackageReference Include="MediatR" Version="8.0.2" />
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="8.0.1" />
@@ -42,8 +48,5 @@
   </ItemGroup>
   <ItemGroup>
     <None Remove="DataFiles\" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="DataFiles\" />
   </ItemGroup>
 </Project>
