Rename Environment to EnvironmentName as per DevOps instructions

--- a/src/SFA.DAS.Rofjaa.Api/appsettings.json
+++ b/src/SFA.DAS.Rofjaa.Api/appsettings.json
@@ -6,7 +6,7 @@
   },
   "ConfigurationStorageConnectionString": "UseDevelopmentStorage=true;",
   "ConfigNames": "SFA.DAS.Rofjaa.Api",
-  "Environment": "LOCAL",
+  "EnvironmentName": "LOCAL",
   "Version": "1.0",
   "APPINSIGHTS_INSTRUMENTATIONKEY": "",
   "AllowedHosts": "*"
