--- a/src/SFA.DAS.Rofjaa.Api/nlog.config
+++ b/src/SFA.DAS.Rofjaa.Api/nlog.config
@@ -10,7 +10,7 @@
 
   <targets>
     <target name="Console" layout="${simplelayout}" xsi:type="Console"/>
-    <target name="Redis" appName="${appName}" environmentKeyName="Environment" connectionStringName="LoggingRedisConnectionString" includeAllProperties="true" layout="${message}" xsi:type="Redis"/>
+    <target name="Redis" appName="${appName}" environmentKeyName="EnvironmentName" connectionStringName="LoggingRedisConnectionString" includeAllProperties="true" layout="${message}" xsi:type="Redis"/>
   </targets>
   <rules>
     <logger name="*" minlevel="Debug" writeTo="Console, Redis"/>
