Update csproj for tests include coverlet

--- a/src/SFA.DAS.Rofjaa.Data.UnitTests/SFA.DAS.Rofjaa.Data.UnitTests.csproj
+++ b/src/SFA.DAS.Rofjaa.Data.UnitTests/SFA.DAS.Rofjaa.Data.UnitTests.csproj
@@ -8,6 +8,7 @@
     <PackageReference Include="AutoFixture" Version="4.12.0" />
     <PackageReference Include="AutoFixture.NUnit3" Version="4.12.0" />
     <PackageReference Include="FluentAssertions" Version="5.10.3" />
+    <PackageReference Include="coverlet.msbuild" Version="3.1.1">
     <PackageReference Include="Lucene.Net" Version="4.8.0-beta00008" />
     <PackageReference Include="Moq" Version="4.14.5" />
     <PackageReference Include="nunit" Version="3.12.0" />
