--- a/src/SFA.DAS.Rofjaa.Api.UnitTests/SFA.DAS.Rofjaa.Api.UnitTests.csproj
+++ b/src/SFA.DAS.Rofjaa.Api.UnitTests/SFA.DAS.Rofjaa.Api.UnitTests.csproj
@@ -6,6 +6,10 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="FluentAssertions" Version="5.10.3" />
+        <PackageReference Include="coverlet.msbuild" Version="3.1.1">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.1.5" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.16.1">
       <PrivateAssets>all</PrivateAssets>
