--- a/src/SFA.DAS.Rofjaa.Infrastructure.UnitTests/SFA.DAS.Rofjaa.Infrastructure.UnitTests.csproj
+++ b/src/SFA.DAS.Rofjaa.Infrastructure.UnitTests/SFA.DAS.Rofjaa.Infrastructure.UnitTests.csproj
@@ -10,6 +10,10 @@
     <PackageReference Include="AutoFixture.NUnit3" Version="4.12.0" />
     <PackageReference Include="FluentAssertions" Version="5.10.3" />
     <PackageReference Include="nunit" Version="3.12.0" />
+        <PackageReference Include="coverlet.msbuild" Version="3.1.1">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="NUnit3TestAdapter" Version="3.16.1">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
