--- a/src/SFA.DAS.Rofjaa.Application.UnitTests/SFA.DAS.Rofjaa.Application.UnitTests.csproj
+++ b/src/SFA.DAS.Rofjaa.Application.UnitTests/SFA.DAS.Rofjaa.Application.UnitTests.csproj
@@ -12,6 +12,12 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+
+    <PackageReference Include="coverlet.collector" Version="3.1.2">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    
     <PackageReference Include="FluentAssertions" Version="5.10.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="5.0.7" />
     <PackageReference Include="Moq" Version="4.16.1" />
