--- a/src/SFA.DAS.Rofjaa.Data.UnitTests/SFA.DAS.Rofjaa.Data.UnitTests.csproj
+++ b/src/SFA.DAS.Rofjaa.Data.UnitTests/SFA.DAS.Rofjaa.Data.UnitTests.csproj
@@ -14,6 +14,13 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+
+    <PackageReference Include="coverlet.collector" Version="3.1.2">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+
+    
     <PackageReference Include="nunit" Version="3.12.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.16.1">
       <PrivateAssets>all</PrivateAssets>
