--- a/src/SFA.DAS.Rofjaa.Domain.UnitTests/SFA.DAS.Rofjaa.Domain.UnitTests.csproj
+++ b/src/SFA.DAS.Rofjaa.Domain.UnitTests/SFA.DAS.Rofjaa.Domain.UnitTests.csproj
@@ -11,6 +11,12 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+
+    <PackageReference Include="coverlet.collector" Version="3.1.2">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    
     <PackageReference Include="NUnit3TestAdapter" Version="3.16.1">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
