--- a/src/SFA.DAS.Rofjaa.Infrastructure.UnitTests/SFA.DAS.Rofjaa.Infrastructure.UnitTests.csproj
+++ b/src/SFA.DAS.Rofjaa.Infrastructure.UnitTests/SFA.DAS.Rofjaa.Infrastructure.UnitTests.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <IsPackable>false</IsPackable>
     <ProjectGuid>29EF260E-F154-4EEE-8312-4AEDFC35BF7A</ProjectGuid>
   </PropertyGroup>
