--- a/src/SFA.DAS.Rofjaa.Api/SFA.DAS.Rofjaa.Api.csproj
+++ b/src/SFA.DAS.Rofjaa.Api/SFA.DAS.Rofjaa.Api.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <ProjectGuid>52499A9C-BC56-43C5-B538-F8CF03DA999C</ProjectGuid>
   </PropertyGroup>
   <ItemGroup>
