Revert "Dotnet 6 upgrade"
This reverts commit 7cc1b64c25c8fcb7a6229af44cfbace363d05dd7.

--- a/src/SFA.DAS.Rofjaa.Api.AcceptanceTests/SFA.DAS.Rofjaa.Api.AcceptanceTests.csproj
+++ b/src/SFA.DAS.Rofjaa.Api.AcceptanceTests/SFA.DAS.Rofjaa.Api.AcceptanceTests.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
     <IsPackable>false</IsPackable>
     <ProjectGuid>F89B4688-2BBF-4114-BB20-7CAB7E7FA0E8</ProjectGuid>
   </PropertyGroup>
