--- a/src/SFA.DAS.Rofjaa.Infrastructure/SFA.DAS.Rofjaa.Infrastructure.csproj
+++ b/src/SFA.DAS.Rofjaa.Infrastructure/SFA.DAS.Rofjaa.Infrastructure.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
     <ProjectGuid>BCAB4ABA-AE1F-46D0-B33B-33355F8F2FB0</ProjectGuid>
   </PropertyGroup>
   <ItemGroup>
