--- a/src/SFA.DAS.Rofjaa.Application.UnitTests/SFA.DAS.Rofjaa.Application.UnitTests.csproj
+++ b/src/SFA.DAS.Rofjaa.Application.UnitTests/SFA.DAS.Rofjaa.Application.UnitTests.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
     <IsPackable>false</IsPackable>
     <ProjectGuid>DE319EE7-8743-4193-A1C5-84698557307E</ProjectGuid>
   </PropertyGroup>
