--- a/src/SFA.DAS.Rofjaa.Application/SFA.DAS.Rofjaa.Application.csproj
+++ b/src/SFA.DAS.Rofjaa.Application/SFA.DAS.Rofjaa.Application.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
     <ProjectGuid>9817A4FE-9D15-4C14-B798-D5717E70CCC1</ProjectGuid>
   </PropertyGroup>
   <ItemGroup>
