--- a/src/SFA.DAS.Rofjaa.Data/SFA.DAS.Rofjaa.Data.csproj
+++ b/src/SFA.DAS.Rofjaa.Data/SFA.DAS.Rofjaa.Data.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
     <ProjectGuid>A644BCD7-58DE-49BB-93C9-6D9439A2D051</ProjectGuid>
   </PropertyGroup>
   <ItemGroup>
