--- a/src/SFA.DAS.Rofjaa.Domain.UnitTests/SFA.DAS.Rofjaa.Domain.UnitTests.csproj
+++ b/src/SFA.DAS.Rofjaa.Domain.UnitTests/SFA.DAS.Rofjaa.Domain.UnitTests.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
     <IsPackable>false</IsPackable>
     <ProjectGuid>067BF3D1-9582-4CDD-8DDD-8EB4BC4899EC</ProjectGuid>
   </PropertyGroup>
