--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -31,7 +31,7 @@ resources:
   - repository: das-platform-building-blocks
     type: github
     name: SkillsFundingAgency/das-platform-building-blocks
-    ref: refs/tags/0.4.57
+    ref: DASD-9618-prevent-uncompleted-slot-swaps
     endpoint: SkillsFundingAgency
   - repository: das-platform-automation
     type: github
