--- a/src/SFA.DAS.Rofjaa.Application/SFA.DAS.Rofjaa.Application.csproj
+++ b/src/SFA.DAS.Rofjaa.Application/SFA.DAS.Rofjaa.Application.csproj
@@ -18,5 +18,13 @@
     <ProjectReference Include="..\SFA.DAS.Rofjaa.Domain\SFA.DAS.Rofjaa.Domain.csproj" />
     <ProjectReference Include="..\SFA.DAS.Rofjaa.Data\SFA.DAS.Rofjaa.Data.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <None Remove="Common\" />
+    <None Remove="Common\DateTime\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Common\" />
+    <Folder Include="Common\DateTime\" />
+  </ItemGroup>
 </Project>
 
