--- a/src/SFA.DAS.Rofjaa.Api.UnitTests/SFA.DAS.Rofjaa.Api.UnitTests.csproj
+++ b/src/SFA.DAS.Rofjaa.Api.UnitTests/SFA.DAS.Rofjaa.Api.UnitTests.csproj
@@ -3,6 +3,7 @@
     <TargetFramework>net6.0</TargetFramework>
     <IsPackable>false</IsPackable>
     <ProjectGuid>E3F8475D-D248-4CD1-9E7F-A613DDD2D7B6</ProjectGuid>
+    <LangVersion>default</LangVersion>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="FluentAssertions" Version="6.7.0" />
