--- a/src/SFA.DAS.Rofjaa.Application.UnitTests/SFA.DAS.Rofjaa.Application.UnitTests.csproj
+++ b/src/SFA.DAS.Rofjaa.Application.UnitTests/SFA.DAS.Rofjaa.Application.UnitTests.csproj
@@ -3,6 +3,7 @@
     <TargetFramework>net6.0</TargetFramework>
     <IsPackable>false</IsPackable>
     <ProjectGuid>DE319EE7-8743-4193-A1C5-84698557307E</ProjectGuid>
+    <LangVersion>default</LangVersion>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="AutoFixture" Version="4.17.0" />
