--- a/src/SFA.DAS.Rofjaa.Domain.UnitTests/SFA.DAS.Rofjaa.Domain.UnitTests.csproj
+++ b/src/SFA.DAS.Rofjaa.Domain.UnitTests/SFA.DAS.Rofjaa.Domain.UnitTests.csproj
@@ -3,6 +3,7 @@
     <TargetFramework>net6.0</TargetFramework>
     <IsPackable>false</IsPackable>
     <ProjectGuid>067BF3D1-9582-4CDD-8DDD-8EB4BC4899EC</ProjectGuid>
+    <LangVersion>default</LangVersion>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="FluentAssertions" Version="6.7.0" />
