--- a/src/SFA.DAS.Rofjaa.Api.AcceptanceTests/SFA.DAS.Rofjaa.Api.AcceptanceTests.csproj
+++ b/src/SFA.DAS.Rofjaa.Api.AcceptanceTests/SFA.DAS.Rofjaa.Api.AcceptanceTests.csproj
@@ -3,6 +3,7 @@
     <TargetFramework>net6.0</TargetFramework>
     <IsPackable>false</IsPackable>
     <ProjectGuid>F89B4688-2BBF-4114-BB20-7CAB7E7FA0E8</ProjectGuid>
+    <LangVersion>default</LangVersion>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="FluentAssertions" Version="6.7.0" />
