--- a/src/SFA.DAS.Rofjaa.Api/SFA.DAS.Rofjaa.Api.csproj
+++ b/src/SFA.DAS.Rofjaa.Api/SFA.DAS.Rofjaa.Api.csproj
@@ -2,6 +2,7 @@
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <ProjectGuid>52499A9C-BC56-43C5-B538-F8CF03DA999C</ProjectGuid>
+    <LangVersion>default</LangVersion>
   </PropertyGroup>
   <ItemGroup>
     <Compile Remove="DataFiles\**" />
