--- a/src/SFA.DAS.Rofjaa.Data.UnitTests/SFA.DAS.Rofjaa.Data.UnitTests.csproj
+++ b/src/SFA.DAS.Rofjaa.Data.UnitTests/SFA.DAS.Rofjaa.Data.UnitTests.csproj
@@ -3,6 +3,7 @@
     <TargetFramework>net6.0</TargetFramework>
     <IsPackable>false</IsPackable>
     <ProjectGuid>0CA16441-4C8B-4FC3-BD23-08F25F491336</ProjectGuid>
+    <LangVersion>default</LangVersion>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="AutoFixture" Version="4.17.0" />
