--- a/src/SFA.DAS.Rofjaa.Data/SFA.DAS.Rofjaa.Data.csproj
+++ b/src/SFA.DAS.Rofjaa.Data/SFA.DAS.Rofjaa.Data.csproj
@@ -2,6 +2,7 @@
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <ProjectGuid>A644BCD7-58DE-49BB-93C9-6D9439A2D051</ProjectGuid>
+    <LangVersion>default</LangVersion>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Lucene.Net" Version="4.8.0-beta00008" />
