--- a/src/SFA.DAS.Rofjaa.Infrastructure.UnitTests/SFA.DAS.Rofjaa.Infrastructure.UnitTests.csproj
+++ b/src/SFA.DAS.Rofjaa.Infrastructure.UnitTests/SFA.DAS.Rofjaa.Infrastructure.UnitTests.csproj
@@ -3,6 +3,7 @@
     <TargetFramework>net6.0</TargetFramework>
     <IsPackable>false</IsPackable>
     <ProjectGuid>29EF260E-F154-4EEE-8312-4AEDFC35BF7A</ProjectGuid>
+    <LangVersion>default</LangVersion>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="AutoFixture" Version="4.17.0" />
