--- a/src/SFA.DAS.Rofjaa.Infrastructure/SFA.DAS.Rofjaa.Infrastructure.csproj
+++ b/src/SFA.DAS.Rofjaa.Infrastructure/SFA.DAS.Rofjaa.Infrastructure.csproj
@@ -2,6 +2,7 @@
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <ProjectGuid>BCAB4ABA-AE1F-46D0-B33B-33355F8F2FB0</ProjectGuid>
+    <LangVersion>default</LangVersion>
   </PropertyGroup>
   <ItemGroup>
     <Compile Remove="Api\**" />
