--- a/src/SFA.DAS.Rofjaa.Api.UnitTests/SFA.DAS.Rofjaa.Api.UnitTests.csproj
+++ b/src/SFA.DAS.Rofjaa.Api.UnitTests/SFA.DAS.Rofjaa.Api.UnitTests.csproj
@@ -18,6 +18,8 @@
     </PackageReference>
     
         <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="8.0.0" />
+    
+        <PackageReference Include="Moq" Version="4.20.70" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.2.1">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
