--- a/src/SFA.DAS.Rofjaa.Domain.UnitTests/SFA.DAS.Rofjaa.Domain.UnitTests.csproj
+++ b/src/SFA.DAS.Rofjaa.Domain.UnitTests/SFA.DAS.Rofjaa.Domain.UnitTests.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="FluentAssertions" Version="6.12.0" />
+    <PackageReference Include="Moq" Version="4.20.70" />
     <PackageReference Include="nunit" Version="3.13.3" />
     <PackageReference Include="coverlet.msbuild" Version="6.0.2">
       <PrivateAssets>all</PrivateAssets>
