--- a/src/SFA.DAS.Rofjaa.Api.UnitTests/SFA.DAS.Rofjaa.Api.UnitTests.csproj
+++ b/src/SFA.DAS.Rofjaa.Api.UnitTests/SFA.DAS.Rofjaa.Api.UnitTests.csproj
@@ -20,7 +20,12 @@
         <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="8.0.0" />
     
         <PackageReference Include="Moq" Version="4.20.70" />
-    <PackageReference Include="NUnit3TestAdapter" Version="4.2.1">
+    
+        <PackageReference Include="NUnit.Analyzers" Version="4.2.0">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
+    <PackageReference Include="NUnit3TestAdapter" Version="4.5.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
@@ -28,7 +33,6 @@
     <PackageReference Include="SFA.DAS.Api.Common" Version="17.1.88" />
     <PackageReference Include="SFA.DAS.Testing.AutoFixture" Version="17.1.103" />
     <PackageReference Include="System.ComponentModel.TypeConverter" Version="4.3.0" />
-    <PackageReference Include="NSubstitute" Version="4.3.0" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\SFA.DAS.Rofjaa.Api\SFA.DAS.Rofjaa.Api.csproj" />
