DASD-11212 - Testing Autoscaling using PP AKS Agents

--- a/pipeline-templates/job/deploy.yml
+++ b/pipeline-templates/job/deploy.yml
@@ -9,6 +9,7 @@ jobs:
 - deployment: DeployWebApp
   pool:
     name: DAS - Continuous Deployment Agents
+    demands: Agent.OS -equals Windows_NT
   environment: ${{ parameters.Environment }}
   strategy:
     runOnce:
