--- a/pipeline-templates/job/deploy.yml
+++ b/pipeline-templates/job/deploy.yml
@@ -8,7 +8,7 @@ parameters:
 jobs:
 - deployment: DeployWebApp
   pool:
-    name: DAS - Continuous Deployment Agents
+    name: DAS - Continuous Deployment Beta
     demands: Agent.OS -equals Windows_NT
   environment: ${{ parameters.Environment }}
   strategy:
