--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -63,6 +63,7 @@ stages:
   variables:
   - group: DevTest Management Resources
   - group: AT DevTest Shared Resources
+  - group: AT das-rofjaa-api
   jobs:
   - template: pipeline-templates/job/deploy.yml
     parameters:
